manifests/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name:  mongodb
        image: mongo:5.0
        args: ["--dbpath", "/data/db"]
        ports:
        - containerPort: 27017
        volumeMounts:
          - mountPath: "/data/db"
            name: mongo-volume
      volumes: 
        - name: mongo-volume 
          persistentVolumeClaim:
            claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 32000
  type: NodePort
