manifests/mongo-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
  labels:
    app: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo-service
  replicas: 3
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name:  mongodb
        image: mongo:5.0
        args: ["--dbpath", "/data/db"]
        ports:
        - containerPort: 27017
        command: ["mongod", "--replSet", "rs0", "--bind_ip_all"]
        volumeMounts:
        - name: mongo-volume
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: my-storage
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  clusterIP: None
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
